# rayon

./: Cargo.toml
.github/workflows/: master.yaml  pr.yaml
rayon-core/: Cargo.toml
rayon-core/src/: future.rs  job.rs  latch.rs  lib.rs  lock_api.rs  registry.rs
rayon-core/src/broadcast/: mod.rs  test.rs
rayon-core/src/join/: mod.rs  test.rs
rayon-core/src/scope/: mod.rs  test.rs
rayon-core/src/sleep/: README.md  mod.rs
rayon-core/src/spawn/: mod.rs  test.rs
rayon-core/src/thread_pool/: test.rs
rayon-core/tests/: stack_overflow_crash.rs
rayon-demo/: Cargo.toml
src/: lib.rs  par_indexmap.rs  range.rs  range_inclusive.rs
src/iter/: test.rs
tests/: collect.rs  octillion.rs
