[package]
name = "rustc-rayon"
version = "0.5.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Simple work-stealing parallelism for Rust - fork for rustc"
rust-version = "1.59"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rustc-rayon"
documentation = "https://docs.rs/rustc-rayon/"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
exclude = ["/ci/*", "/scripts/*", "/.github/*", "/bors.toml"]

[workspace]
members = ["rayon-core"]
exclude = ["ci"]

[lib]
name = "rayon"

[dependencies]
indexmap = { version = "2", optional = true }
rustc-rayon-core = { version = "0.5", path = "rayon-core" }

# This is a public dependency!
[dependencies.either]
version = "1.0"
default-features = false

[dev-dependencies]
async-lock = "3.2.0"
flume = "0.11.1"
rand = "0.8"
rand_xorshift = "0.3"
